# minicompiler

./: CMakeLists.txt  LICENSE  README.md  compiler_project_plan.md
examples/: factorial.mc  hello.mc
include/ast/: ast.h
include/codegen/: code_generator.h
include/common/: token.h
include/ir/: ir.h  ir_builder.h
include/lexer/: lexer.h
include/optimizer/: optimizer.h
include/parser/: parser.h
include/semantic/: semantic.h
src/: CMakeLists.txt  main.cpp
src/ast/: ast.cpp
src/codegen/: code_generator.cpp
src/common/: token.cpp
src/ir/: ir.cpp  ir_builder.cpp
src/lexer/: lexer.cpp
src/optimizer/: optimizer.cpp
src/parser/: parser.cpp
src/semantic/: semantic.cpp
tests/: CMakeLists.txt  ir_test.cpp  lexer_test.cpp  parser_test.cpp
